# librga-rockchip

./: .gitignore  Android.bp  Android.go  Android.mk  CHANGELOG.md  CMakeLists.txt  README.md  SConscript  cmake-android.sh  cmake-linux.sh  cmake-rt-thread.sh  meson.build
.github/workflows/: Dockerfile  build.yml  build_and_release.yml
core/: GrallocOps.cpp  NormalRga.cpp  NormalRga.h  NormalRgaApi.cpp  NormalRgaContext.h  RgaUtils.cpp  RgaUtils_symbol.cpp  RockchipRga.cpp  platform_gralloc4.cpp  platform_gralloc4.h  platform_gralloc5.cpp  platform_gralloc5.h  rga_gralloc.cpp  rga_gralloc.h  rga_sync.cpp
core/adapter/rt-thread/: ioctl.h  lock.h  rtt_adapter.h
core/hardware/: rga_ioctl.h
core/utils/: utils.cpp  utils.h
core/utils/android_utils/: android_utils.h
core/utils/android_utils/src/: android_utils.cpp
core/utils/drm_utils/: drm_utils.h
core/utils/drm_utils/src/: drm_utils.cpp
debian/: .gitignore  copyright
docs/: Rockchip_Developer_Guide_RGA_CN.md  Rockchip_Developer_Guide_RGA_EN.md  Rockchip_FAQ_RGA_CN.md  Rockchip_FAQ_RGA_EN.md
im2d_api/: im2d_buffer.h  im2d_common.h  im2d_single.h  im2d_task.h  im2d_type.h  im2d_version.h
im2d_api/src/: im2d.cpp  im2d_context.cpp  im2d_context.h  im2d_debugger.cpp  im2d_debugger.h  im2d_hardware.h  im2d_impl.cpp  im2d_impl.h  im2d_job.cpp  im2d_job.h  im2d_log.cpp  im2d_log.h
include/: GrallocOps.h  drmrga.h  platform_gralloc4.h  rga.h
samples/: CMakeLists.txt
samples/alpha_demo/src/: rga_alpha_rgba5551_demo.cpp
samples/copy_demo/src/: CMakeLists.txt  rga_copy_drm_fourcc_demo.cpp  rga_copy_splice_c_demo.c
samples/cvtcolor_demo/: CMakeLists.txt
samples/gauss_demo/src/: rga_gauss_demo.cpp  rga_gauss_matrix_demo.cpp
samples/im2d_api_demo/: CMakeLists.txt  rgaImDemo.cpp
samples/im2d_slt/: Android.mk  CMakeLists.txt  README.md  SConscript  cmake-linux.sh
samples/im2d_slt/chip_config/: rV1126b_slt_config.h.template  rk3506_slt_config.h.template  rk3576_slt_config.h.template  rk3588_slt_config.h.template  rv1103b_slt_config.h.template  rv1106_slt_config.h.template
samples/im2d_slt/include/: rga_slt.h
samples/im2d_slt/sources/: SConscript  crc.h  rga_im2d_slt.cpp  rga_slt_crc.cpp  rga_slt_crc.h  rga_slt_parser.cpp  rga_slt_parser.h  slt_config.h
samples/palette_demo/src/: CMakeLists.txt  rga_palette_demo.cpp
samples/resize_demo/src/: rga_resize_config_interpolation_demo.cpp
samples/transform_demo/src/: CMakeLists.txt  rga_transform_center_rotate_demo.cpp
samples/utils/: CMakeLists.txt  utils.cpp  utils.h
toolchains/: toolchain_rt_thread.cmake
